src/app/order/components/order-common-style.css
.products {
    width: 85%;
    margin: 30px auto;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-column-gap: 30px;
    grid-row-gap: 30px;
}

.products > h2 {
    margin: 0;
}

.product-card {
    display: flex;
    flex-direction: column;
    cursor: pointer;
    border-radius: 5px;
    overflow: hidden;
    -webkit-box-shadow: 0 0 30px -15px rgba(0, 0, 0, 0.66);
    -moz-box-shadow: 0 0 30px -15px rgba(0, 0, 0, 0.66);
    box-shadow: 0 0 30px -15px rgba(0, 0, 0, 0.66);
    transition: .3s;
}

.product-card:hover {
    -webkit-box-shadow: 0 0 30px -7px rgba(0, 0, 0, 0.66);
    -moz-box-shadow: 0 0 30px -7px rgba(0, 0, 0, 0.66);
    box-shadow: 0 0 30px -7px rgba(0, 0, 0, 0.66);
    transform: translateY(-7px);
}

.card-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px 15px;
}

.card-content > h4 {
    font-size: 18px;
    font-weight: 500;
    margin: 0;
}

.image-wrapper {
    width: 100%;
    height: 350px;
    overflow: hidden;
    position: relative;
}

.image-wrapper > img {
    width: 100%;
    position: absolute;
    left: 0;
    top: 0;
}

.dimensions {
    display: flex;
    justify-content: center;
    align-items: flex-start;
}

.size {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    perspective: 800px;
}

.size > img {
    width: 20px;
}

.length-dimension {
    padding: 0 7px;
    margin: 0 7px;
    border-left: 1px solid rgb(230, 230, 230);
    border-right: 1px solid rgb(230, 230, 230);
}

.length-dimension > img {
    width: 27px;
    transform: rotateX(60deg) rotateZ(13deg);
}

.card-actions {
    min-height: 70px;
    display: flex;
    flex: 1;
    align-items: flex-end;
    justify-content: flex-end;
    padding: 10px 15px;
    background-color: rgb(245, 245, 245);
    position: relative;
}

.product-price {
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    left: 0;
    bottom: 0;
    padding: 0 15px;
    color: white;
    font-size: 18px;
    background-color: rgb(53, 53, 53);
}

.quantity-input-group {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.quantity-input {
    text-align: center;
    width: 50px;
    height: 36px;
    line-height: 20px;
    color: #24292e;
    border: 1px solid #e1e4e8;
    outline: none;
    box-shadow: inset 0 1px 0 rgba(225, 228, 232, .2);
    max-width: 100%;
    background-color: #fafbfc;
    padding: 10px;
    font-size: 16px;
    border-radius: 5px;
}

.quantity-input:focus {
    background-color: #fff;
    border-color: #0366d6;
    outline: none;
    box-shadow: 0 0 0 3px rgba(3, 102, 214, .3);
}

.add-to-cart {
    display: block;
    position: absolute;
    right: 5px;
    bottom: 5px;
    color: white;
    transition: .4s;
    transition-timing-function: linear;
}

.add-to-cart::after {
    width: 100px;
    height: 100px;
    content: '';
    background-color: #3f51b5;
    z-index: 1;
    position: absolute;
    top: -20px;
    left: -20px;
    border-radius: 50%;
    box-shadow: 0 0 15px gray;
    transition: .2s;
}

.add-to-cart:hover:after {
    background-color: #2b387c;
}

.add-to-cart mat-icon, .added-to-cart mat-icon {
    width: 30px;
    height: 30px;
    font-size: 30px;
    line-height: 30px;
    transition: .4s;
    transition-timing-function: ease-in-out;
}

.added-to-cart {
    position: absolute;
    right: 5px;
    bottom: 5px;
    z-index: 3;
    pointer-events: none;
    width: 40px;
    line-height: 24px;
    font-size: 24px;
    color: white;
}

.added-to-cart mat-icon {
    opacity: 0;
    transition: .8s;
}

.mat-header-cell {
    flex-direction: column;
    justify-content: center;
}

.mat-cell {
    text-align: start;
    justify-content: start;
}

@media screen and (max-width: 1000px) {
    .products {
        grid-template-columns: 1fr;
    }
}

